--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "framer-motion": "^10.3.1",
     "next": "^13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.3.5",
+    "react-icons": "^4.8.0"
   }
 }
