--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@hello-pangea/dnd": "^16.2.0",
     "framer-motion": "^10.3.1",
+    "lodash": "^4.17.21",
     "next": "^13.2.4",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-loading-icons": "^1.1.0"
   }
 }
