--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -19,5 +20,9 @@
     "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.8.0",
     "react-loading-icons": "^1.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.15.3",
+    "typescript": "5.0.2"
   }
 }
