--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@hello-pangea/dnd": "^16.2.0",
+    "@oauth-everything/passport-discord": "^1.0.2",
     "framer-motion": "^10.3.1",
+    "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "next": "^13.2.4",
     "react": "18.2.0",
