--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.10.6",
     "@hello-pangea/dnd": "^16.2.0",
     "@oauth-everything/passport-discord": "^1.0.2",
+    "dotenv": "^16.0.3",
     "framer-motion": "^10.3.1",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
