--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.8.0",
-    "react-loading-icons": "^1.1.0"
+    "react-loading-icons": "^1.1.0",
+    "react-virtualized": "^9.22.5"
   },
   "devDependencies": {
     "@types/node": "18.15.3",
