--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,12 @@ bot/session.json
 
 # ------
 bot/keys
-bot/__pycache__
 logs
 keys
 bot/config.py
-bot/src/api/__pycache__
-bot/src/music/__pycache__
 
+
+*__pycache__
 # dependencies
 /node_modules
 /.pnp
