--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,6 +1,6 @@
-uvicorn 
-discord
-Wavelink
-fastapi
-Zenora
-websockets
+uvicorn==0.22.0
+discord==2.2.3
+Wavelink==2.3.1
+fastapi==0.95.2
+Zenora==0.0.3
+websockets==11.0.3
