set docker location to localhost

--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -13,8 +13,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # REQUIRED: Change these if you plan on hosting this
 # outside of localhost
 ENV LAVALINK_URI=http://lavalink:2333
-ENV REDIRECT_URI=http://0.0.0.0:5090/auth/redirect
-ENV REDIRECT_LOC=http://0.0.0.0:3000/posts/server-select
+ENV REDIRECT_URI=http://localhost:5090/auth/redirect
+ENV REDIRECT_LOC=http://localhost:3000/posts/server-select
 
 # REQUIRED: Env variables for your bot token, client_id, and client_secret
 # These can be found in the developer portal under Bot and OAuth2 -> General 
